# Lights_And_Shadows_OpenGL

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: fullscreen.frag  fullscreen.vert  shader.frag  shader.vert
include/: AssetManager.h  Camera.h  EngineConfig.h  Mesh.h  RenderCommand.h  RenderState.h  RenderTarget.h  Shader.h  Texture.h  Transform.h  Window.h
src/: AssetManager.cpp  Camera.cpp  Mesh.cpp  RenderCommand.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Window.cpp  main.cpp
